<resources>
    <string name="app_name">PlayList Market</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="library">Медиатека</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="yandex_android_developer_course" translatable="false">https://practicum.yandex.ru/android-developer</string>
    <string name="subject_for_email_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_for_email_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="work_mail" translatable="false">myWorkMail@mail.com</string>
    <string name="unknown_track_name">Трек без названия</string>
    <string name="unknown_artist_name">Неизвестный исполнитель</string>
    <string name="unknown_track_url"> </string>
    <string name="empty_result">Ничего не нашлось</string>
    <string name="failed_to_load">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="media_library">Медиатека</string>
    <string name="title_activity_medialibrary">MedialibraryActivity</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали ни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>

</resources>