<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.fragment.SettingsFragment"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/header_toolbar"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchBlackTheme"
        style="@style/SettingMenuItemStyle"
        android:text="@string/dark_theme"
        android:checked="false"
        app:thumbTint="@color/thumb_Tint_Setting"
        app:trackTint="@color/track_Tint_Setting"
        app:useMaterialThemeColors="false"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/buttonShareApp"
        style="@style/SettingMenuItemStyle"
        android:text="@string/share_app"
        android:drawableEnd="@drawable/ic_share"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/buttonWriteToSupport"
        style="@style/SettingMenuItemStyle"
        android:text="@string/write_to_support"
        android:drawableEnd="@drawable/ic_support"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/buttonUserAgreement"
        style="@style/SettingMenuItemStyle"
        android:text="@string/user_agreement"
        android:drawableEnd="@drawable/ic_arrow_forward"
        />

</LinearLayout>