<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/default_main_layout_padding_horizontal"
    android:paddingVertical="@dimen/default_main_layout_padding_vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:title="@string/app_name"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_go_to_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_search"
        android:text="@string/search"
        android:textColor="@color/black"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_go_to_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:layout_weight="1"
        app:icon="@drawable/ic_library"
        android:text="@string/library"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_go_to_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:layout_weight="1"
        app:icon="@drawable/ic_settings"
        android:text="@string/settings"
        />

</LinearLayout>


