<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/default_main_layout_padding_horizontal"
    android:paddingVertical="@dimen/default_main_layout_padding_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"
        android:text="@string/app_name"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/default_corner_radius_button"
        android:height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_search"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconSize="@dimen/default_icon_size_button"
        android:textSize="@dimen/default_text_size"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/default_corner_radius_button"
        android:height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_library"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconSize="@dimen/default_icon_size_button"
        android:textSize="@dimen/default_text_size"
        android:text="@string/library"
        android:textAllCaps="false"
        android:textColor="@color/black"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/default_corner_radius_button"
        android:height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_settings"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconSize="@dimen/default_icon_size_button"
        android:textSize="@dimen/default_text_size"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        />

</LinearLayout>


