<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="@dimen/default_main_layout_padding_vertical"
    android:paddingHorizontal="@dimen/default_main_layout_padding_horizontal">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/image_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/black"
            android:layout_marginLeft="12dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Темная тема"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_gravity="end"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="21dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/share_app"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="start"/>
        <ImageView
            android:layout_width="@dimen/default_icon_size_button"
            android:layout_height="@dimen/default_icon_size_button"
            android:src="@drawable/ic_share"
            android:layout_gravity="end" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="21dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/write_to_support"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="start"/>
        <ImageView
            android:layout_width="@dimen/default_icon_size_button"
            android:layout_height="@dimen/default_icon_size_button"
            android:src="@drawable/ic_support"
            android:layout_gravity="end"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="21dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/user_agreement"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="start"/>
        <ImageView
            android:layout_width="@dimen/default_icon_size_button"
            android:layout_height="@dimen/default_icon_size_button"
            android:src="@drawable/ic_arrow_forward"
            android:layout_gravity="end"/>

    </FrameLayout>
</LinearLayout>